was breaking on chrome (some random 15px whitespace was added), fixed

--- a/liquidDuckDataMiningForm/public/css/styles.css
+++ b/liquidDuckDataMiningForm/public/css/styles.css
@@ -135,4 +135,5 @@ textarea:not(:focus):valid ~ .floating-label {
 
 .input-container {
     position: relative;
+    display: grid;
 }
